--- a/apps/nwp/lami/hyde_configuration_nwp_lami-2i_example.json
+++ b/apps/nwp/lami/hyde_configuration_nwp_lami-2i_example.json
@@ -2,8 +2,8 @@
   "algorithm":{
     "flags": {
       "cleaning_static_ancillary_data": false,
-      "cleaning_dynamic_ancillary_data": false,
-      "cleaning_dynamic_ancillary_archive": false,
+      "cleaning_dynamic_ancillary_data": true,
+      "cleaning_dynamic_ancillary_archive": true,
       "cleaning_dynamic_product_data": true
     },
     "ancillary": {
