--- a/.gitignore
+++ b/.gitignore
@@ -110,6 +110,10 @@ ENV/
 env.bak/
 venv.bak/
 
+# Datasets
+dset/
+hyde_runner_settings.txt
+
 # Spyder project settings
 .spyderproject
 .spyproject
